2008-09-03  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.23.610.

2008-09-03  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.23.377 release.

2008-09-03  Thomas Thurman  <tthurman@gnome.org>

        * src/metacity.desktop.in: removed invalid "Window Manager" group
          at request of Matthias Clasen.

2008-09-02  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.23.377.

2008-09-02  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.23.233 release.

2008-09-02  Thomas Thurman  <tthurman@gnome.org>

        Desktop file moved, according to policy change.  Closes #549479.

        * src/metacity.desktop.in: Don't display the desktop file
        * src/Makefile.am: Desktop file goes in apps directory

2008-08-20  Baptiste Mille-Mathias <baptiste.millemathias@gmail.com>

	* src/default_icon.png: updated to a tango styled pixmap

2008-08-18  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.23.233.

2008-08-18  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.23.144 release.

2008-08-18  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: undo erroneous earlier version number change
          (it doesn't bump to 2.24 until we actually ship, even
          though this is the 2.24 branch)

2008-08-18  Thomas Thurman  <tthurman@gnome.org>

        * Cherrypick bugfixes from trunk.

2008-08-18  Eric Piel  <e.a.b.piel@tudelft.nl>
 
         * src/core/workspace.c (ensure_work_areas_validated): add a copy of
          each strut in a window to the workspace's strut list, instead of
          using the copy in the list (which would mean it was double-freed).
          Believed to fix #468075.
 
2008-08-16  Ted Percival  <ted@midg3t.net>
  
          Ensure the user_rect is set sanely for windows that start maximized.

2008-08-13  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-branch bump to 2.24.0
